--- a/package.json
+++ b/package.json
@@ -50,13 +50,13 @@
     "argon2": "^0.28.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "dayjs": "^1.11.5",
     "mkdirp": "^1.0.4",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.6",
-    "silly-datetime": "^0.1.2",
     "swagger-ui-express": "^4.5.0"
   },
   "devDependencies": {
