--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "db:restart": "npm run db:rm && npm run db:up && npm run db:deploy",
     "db:deploy": "prisma migrate deploy",
     "db:studio": "prisma studio",
+    "db:seed": "ts-node ./prisma/seed.ts",
     "db:rm:test": "docker compose rm test-db -s -f -v",
     "db:up:test": "docker compose up test-db -d && sleep 5",
     "db:restart:test": "npm run db:rm:test && npm run db:up:test && npm run db:deploy:test",
