--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "dayjs": "^1.11.5",
+    "lodash": "^4.17.21",
     "mkdirp": "^1.0.4",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
@@ -66,6 +67,7 @@
     "@nestjs/testing": "^9.0.8",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.6",
+    "@types/lodash": "^4.14.184",
     "@types/node": "^18.6.4",
     "@types/passport-jwt": "^3.0.6",
     "@types/supertest": "^2.0.12",
