--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "db:rm:test": "docker compose rm test-db -s -f -v",
     "db:up:test": "docker compose up test-db -d && sleep 5",
     "db:restart:test": "npm run db:rm:test && npm run db:up:test && npm run db:deploy:test",
-    "db:deploy:test": "dotenv -e ./env.test -- prisma migrate deploy",
-    "db:studio:test": "dotenv -e ./env.test -- prisma studio",
+    "db:deploy:test": "dotenv -e .env.test -- prisma migrate deploy",
+    "db:studio:test": "dotenv -e .env.test -- prisma studio",
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -40,15 +40,15 @@
     "log": "standard-version --release"
   },
   "dependencies": {
-    "@nestjs/common": "^9.0.8",
+    "@nestjs/common": "^9.1.4",
     "@nestjs/config": "^2.2.0",
-    "@nestjs/core": "^9.0.8",
+    "@nestjs/core": "^9.1.4",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
-    "@nestjs/platform-express": "^9.0.8",
-    "@nestjs/swagger": "^6.0.5",
-    "@prisma/client": "^4.1.1",
-    "argon2": "^0.28.7",
+    "@nestjs/platform-express": "^9.1.4",
+    "@nestjs/swagger": "^6.1.2",
+    "@prisma/client": "^4.4.0",
+    "argon2": "^0.29.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "dayjs": "^1.11.5",
@@ -57,36 +57,36 @@
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.5.6",
+    "rxjs": "^7.5.7",
     "swagger-ui-express": "^4.5.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/schematics": "^9.0.1",
-    "@nestjs/testing": "^9.0.8",
-    "@types/express": "^4.17.13",
-    "@types/jest": "28.1.6",
-    "@types/node": "^18.6.4",
+    "@nestjs/cli": "^9.1.4",
+    "@nestjs/schematics": "^9.0.3",
+    "@nestjs/testing": "^9.1.4",
+    "@types/express": "^4.17.14",
+    "@types/jest": "29.1.2",
+    "@types/node": "^18.11.0",
     "@types/passport-jwt": "^3.0.6",
     "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.32.0",
-    "@typescript-eslint/parser": "^5.32.0",
+    "@typescript-eslint/eslint-plugin": "^5.40.0",
+    "@typescript-eslint/parser": "^5.40.0",
     "dotenv-cli": "^6.0.0",
-    "eslint": "^8.21.0",
+    "eslint": "^8.25.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "28.1.3",
-    "pactum": "^3.1.13",
+    "jest": "29.2.0",
+    "pactum": "^3.2.2",
     "prettier": "^2.7.1",
-    "prisma": "^4.1.1",
+    "prisma": "^4.4.0",
     "source-map-support": "^0.5.21",
     "standard-version": "^9.5.0",
-    "supertest": "^6.2.4",
-    "ts-jest": "28.0.7",
-    "ts-loader": "^9.3.1",
+    "supertest": "^6.3.0",
+    "ts-jest": "29.0.3",
+    "ts-loader": "^9.4.1",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "4.1.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.8.4"
   },
   "jest": {
     "moduleFileExtensions": [
